traduccion del TODO

--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
   1.Chose a name... without trademarks violations
   2.Define the features of the first version
   3.Start coding!
+------------------------------------------------------------------------------
+  1.Elegir un nombre... sin violaciones de marcas
+  2.Definir las caracteristicas de la primera versión
+  3.Empezar a codear!
+  
